--- a/index.html
+++ b/index.html
@@ -709,24 +709,15 @@
             <span class="online-icon"></span>
             74735 users online
           </p>
-        <div class="btns-setting-chat hide-on-stream">
-          <button data-popup="genderPopup" id="genderBtn">Gender</button>
+        <div class="btns-setting-chat ">
+          <button data-popup="settingsPopup" id="genderBtn">Gender</button>
           <input type="hidden" id="genderInput">
 
-          <button data-popup="countryPopup" id="countryBtn">Country</button>
+          <button data-popup="settingsPopup" id="countryBtn">Country</button>
           <input type="hidden" id="countryInput">
         </div>
         <button id="startButton">Start Chat</button>
-        <div class="tag-container">
-          <div class="tags" id="tags"></div>
-          <div class="input-container">
-              <span>#</span>
-              <input type="text" id="tagInput" maxlength="14" placeholder="Add Tag!">
-              <button class="add-button" id="addTag">
-                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g  stroke-width="0"></g><g  stroke-linecap="round" stroke-linejoin="round"></g><g > <path d="M10.3009 13.6949L20.102 3.89742M10.5795 14.1355L12.8019 18.5804C13.339 19.6545 13.6075 20.1916 13.9458 20.3356C14.2394 20.4606 14.575 20.4379 14.8492 20.2747C15.1651 20.0866 15.3591 19.5183 15.7472 18.3818L19.9463 6.08434C20.2845 5.09409 20.4535 4.59896 20.3378 4.27142C20.2371 3.98648 20.013 3.76234 19.7281 3.66167C19.4005 3.54595 18.9054 3.71502 17.9151 4.05315L5.61763 8.2523C4.48114 8.64037 3.91289 8.83441 3.72478 9.15032C3.56153 9.42447 3.53891 9.76007 3.66389 10.0536C3.80791 10.3919 4.34498 10.6605 5.41912 11.1975L9.86397 13.42C10.041 13.5085 10.1295 13.5527 10.2061 13.6118C10.2742 13.6643 10.3352 13.7253 10.3876 13.7933C10.4468 13.87 10.491 13.9585 10.5795 14.1355Z"  stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
-              </button>
-          </div>
-      </div>
+
         <div class="controls">
           <div class="stream-load ">
             <div class="heart-container">
@@ -1015,6 +1006,21 @@
             </div>
         </div>
     </div>
+
+    <div id="countryPopup" class="popup">
+        <div class="popup-background"></div>
+        <div class="popup-content">
+            <button class="popup-close">
+                <svg viewBox="0 0 24 24"  xmlns="http://www.w3.org/2000/svg"><g stroke-width="0"></g><g stroke-linecap="round" stroke-linejoin="round"></g><g> <path d="M20.7457 3.32851C20.3552 2.93798 19.722 2.93798 19.3315 3.32851L12.0371 10.6229L4.74275 3.32851C4.35223 2.93798 3.71906 2.93798 3.32854 3.32851C2.93801 3.71903 2.93801 4.3522 3.32854 4.74272L10.6229 12.0371L3.32856 19.3314C2.93803 19.722 2.93803 20.3551 3.32856 20.7457C3.71908 21.1362 4.35225 21.1362 4.74277 20.7457L12.0371 13.4513L19.3315 20.7457C19.722 21.1362 20.3552 21.1362 20.7457 20.7457C21.1362 20.3551 21.1362 19.722 20.7457 19.3315L13.4513 12.0371L20.7457 4.74272C21.1362 4.3522 21.1362 3.71903 20.7457 3.32851Z"></path> </g></svg>
+            </button>
+            <div class="country-select">
+                <button class="country-option" data-value="de">Germany <span><img src="./img/uk.png" alt="img"></span> </button>
+                <button class="country-option" data-value="jp">Japan <span><img src="./img/uk.png" alt="img"></span></button>
+                <button class="country-option" data-value="fr">France <span><img src="./img/uk.png" alt="img"></span></button>
+                <button class="country-option" data-value="ru">Russia <span><img src="./img/uk.png" alt="img"></span></button>
+            </div>
+        </div>
+    </div>
     <div id="reportPopup" class="popup">
         <div class="popup-background"></div>
         <div class="popup-content">
@@ -1031,18 +1037,50 @@
             </div>
         </div>
     </div>
-    <div id="countryPopup" class="popup">
+    <div id="settingsPopup" class="popup">
         <div class="popup-background"></div>
-        <div class="popup-content">
+        <div class="popup-content gender-popup">
             <button class="popup-close">
                 <svg viewBox="0 0 24 24"  xmlns="http://www.w3.org/2000/svg"><g stroke-width="0"></g><g stroke-linecap="round" stroke-linejoin="round"></g><g> <path d="M20.7457 3.32851C20.3552 2.93798 19.722 2.93798 19.3315 3.32851L12.0371 10.6229L4.74275 3.32851C4.35223 2.93798 3.71906 2.93798 3.32854 3.32851C2.93801 3.71903 2.93801 4.3522 3.32854 4.74272L10.6229 12.0371L3.32856 19.3314C2.93803 19.722 2.93803 20.3551 3.32856 20.7457C3.71908 21.1362 4.35225 21.1362 4.74277 20.7457L12.0371 13.4513L19.3315 20.7457C19.722 21.1362 20.3552 21.1362 20.7457 20.7457C21.1362 20.3551 21.1362 19.722 20.7457 19.3315L13.4513 12.0371L20.7457 4.74272C21.1362 4.3522 21.1362 3.71903 20.7457 3.32851Z"></path> </g></svg>
             </button>
+
+            <div class="gender-select">
+                <button class="gender-option" data-value="male">
+                    <span >
+                    <img src="./img/male.png" alt="img">
+                    </span>
+                    Male
+                </button>
+                <button class="gender-option" data-value="female">
+                    <span >
+                        <img src="./img/female.png" alt="img">
+                    </span>
+                    Female
+                </button>
+                <button class="gender-option" data-value="all">
+                    <span >
+                        <img src="./img/gender.png" alt="img">
+                    </span>
+                    All
+                </button>
+            </div>
+            <div class="tag-container">
+                <div class="tags" id="tags"></div>
+                <div class="input-container">
+                    <span>#</span>
+                    <input type="text" id="tagInput" maxlength="14" placeholder="Add Tag!">
+                    <button class="add-button" id="addTag">
+                      <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g  stroke-width="0"></g><g  stroke-linecap="round" stroke-linejoin="round"></g><g > <path d="M10.3009 13.6949L20.102 3.89742M10.5795 14.1355L12.8019 18.5804C13.339 19.6545 13.6075 20.1916 13.9458 20.3356C14.2394 20.4606 14.575 20.4379 14.8492 20.2747C15.1651 20.0866 15.3591 19.5183 15.7472 18.3818L19.9463 6.08434C20.2845 5.09409 20.4535 4.59896 20.3378 4.27142C20.2371 3.98648 20.013 3.76234 19.7281 3.66167C19.4005 3.54595 18.9054 3.71502 17.9151 4.05315L5.61763 8.2523C4.48114 8.64037 3.91289 8.83441 3.72478 9.15032C3.56153 9.42447 3.53891 9.76007 3.66389 10.0536C3.80791 10.3919 4.34498 10.6605 5.41912 11.1975L9.86397 13.42C10.041 13.5085 10.1295 13.5527 10.2061 13.6118C10.2742 13.6643 10.3352 13.7253 10.3876 13.7933C10.4468 13.87 10.491 13.9585 10.5795 14.1355Z"  stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+                    </button>
+                </div>
+            </div>
             <div class="country-select">
                 <button class="country-option" data-value="de">Germany <span><img src="./img/uk.png" alt="img"></span> </button>
                 <button class="country-option" data-value="jp">Japan <span><img src="./img/uk.png" alt="img"></span></button>
                 <button class="country-option" data-value="fr">France <span><img src="./img/uk.png" alt="img"></span></button>
                 <button class="country-option" data-value="ru">Russia <span><img src="./img/uk.png" alt="img"></span></button>
             </div>
+
         </div>
     </div>
     <div id="friendRequestPopup" class="popup" style="display: none;">
