--- a/index.html
+++ b/index.html
@@ -675,13 +675,40 @@
         </button>
         <button class="btn-premium" data-tab="4">
           <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <g stroke-width="0"></g>
-            <g stroke-linecap="round" stroke-linejoin="round"></g>
-            <g>
+            <defs>
+              <!-- Платиновый градиент -->
+
+            </defs>
+            <g >
+              <!-- Нижний элемент (опущен на 2px) -->
               <path
                 fill-rule="evenodd"
                 clip-rule="evenodd"
                 d="M5 19C5 18.4477 5.44772 18 6 18L18 18C18.5523 18 19 18.4477 19 19C19 19.5523 18.5523 20 18 20L6 20C5.44772 20 5 19.5523 5 19Z"
+                transform="translate(0, 1)"
+              ></path>
+              <!-- Корона -->
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M9.87867 4.70711C11.0502 3.53554 12.9497 3.53554 14.1213 4.70711L16.6878 7.27359C16.9922 7.57795 17.4571 7.6534 17.8421 7.46091L18.5528 7.10558C20.0877 6.33813 21.7842 7.80954 21.2416 9.43755L19.4045 14.9487C18.9962 16.1737 17.8498 17 16.5585 17H7.44151C6.15022 17 5.0038 16.1737 4.59546 14.9487L2.75842 9.43755C2.21575 7.80955 3.91231 6.33813 5.44721 7.10558L6.15787 7.46091C6.54286 7.6534 7.00783 7.57795 7.31219 7.27359L9.87867 4.70711Z"
+              ></path>
+            </g>
+          </svg>
+          <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <defs>
+              <linearGradient id="gold-gradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                <stop offset="0%" style="stop-color:#FFD700; stop-opacity:1"/>
+                <stop offset="50%" style="stop-color:#FFC107; stop-opacity:1"/>
+                <stop offset="100%" style="stop-color:#FF8C00; stop-opacity:1"/>
+              </linearGradient>
+            </defs>
+            <g stroke="url(#gold-gradient)" fill="url(#gold-gradient)">
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M5 19C5 18.4477 5.44772 18 6 18L18 18C18.5523 18 19 18.4477 19 19C19 19.5523 18.5523 20 18 20L6 20C5.44772 20 5 19.5523 5 19Z"
+                transform="translate(0, 2)"
               ></path>
               <path
                 fill-rule="evenodd"
@@ -690,6 +717,33 @@
               ></path>
             </g>
           </svg>
+
+          <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <defs>
+              <!-- Бриллиантовый градиент -->
+              <linearGradient id="diamond-gradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                <stop offset="0%" style="stop-color:#F0F8FF; stop-opacity:1"/> <!-- Голубоватый блеск -->
+                <stop offset="50%" style="stop-color:#D6ECF3; stop-opacity:1"/> <!-- Светло-серебристый -->
+                <stop offset="100%" style="stop-color:#B0C4DE; stop-opacity:1"/> <!-- Холодный серебристый -->
+              </linearGradient>
+            </defs>
+            <g stroke="url(#diamond-gradient)" fill="url(#diamond-gradient)">
+              <!-- Нижний элемент (опущен на 2px) -->
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M5 19C5 18.4477 5.44772 18 6 18L18 18C18.5523 18 19 18.4477 19 19C19 19.5523 18.5523 20 18 20L6 20C5.44772 20 5 19.5523 5 19Z"
+                transform="translate(0, 2)"
+              ></path>
+              <!-- Корона -->
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M9.87867 4.70711C11.0502 3.53554 12.9497 3.53554 14.1213 4.70711L16.6878 7.27359C16.9922 7.57795 17.4571 7.6534 17.8421 7.46091L18.5528 7.10558C20.0877 6.33813 21.7842 7.80954 21.2416 9.43755L19.4045 14.9487C18.9962 16.1737 17.8498 17 16.5585 17H7.44151C6.15022 17 5.0038 16.1737 4.59546 14.9487L2.75842 9.43755C2.21575 7.80955 3.91231 6.33813 5.44721 7.10558L6.15787 7.46091C6.54286 7.6534 7.00783 7.57795 7.31219 7.27359L9.87867 4.70711Z"
+              ></path>
+            </g>
+          </svg>
+
         </button>
       </div>
       <!-- <button type="button" class="btn-pr btn-nav" data-popup="popup1">Premium</button> -->
@@ -1043,8 +1097,9 @@
             <button class="popup-close">
                 <svg viewBox="0 0 24 24"  xmlns="http://www.w3.org/2000/svg"><g stroke-width="0"></g><g stroke-linecap="round" stroke-linejoin="round"></g><g> <path d="M20.7457 3.32851C20.3552 2.93798 19.722 2.93798 19.3315 3.32851L12.0371 10.6229L4.74275 3.32851C4.35223 2.93798 3.71906 2.93798 3.32854 3.32851C2.93801 3.71903 2.93801 4.3522 3.32854 4.74272L10.6229 12.0371L3.32856 19.3314C2.93803 19.722 2.93803 20.3551 3.32856 20.7457C3.71908 21.1362 4.35225 21.1362 4.74277 20.7457L12.0371 13.4513L19.3315 20.7457C19.722 21.1362 20.3552 21.1362 20.7457 20.7457C21.1362 20.3551 21.1362 19.722 20.7457 19.3315L13.4513 12.0371L20.7457 4.74272C21.1362 4.3522 21.1362 3.71903 20.7457 3.32851Z"></path> </g></svg>
             </button>
-
+            <h2>Gender</h2>
             <div class="gender-select">
+
                 <button class="gender-option" data-value="male">
                     <span >
                     <img src="./img/male.png" alt="img">
@@ -1064,7 +1119,9 @@
                     All
                 </button>
             </div>
+            <h2>Tags</h2>
             <div class="tag-container">
+
                 <div class="tags" id="tags"></div>
                 <div class="input-container">
                     <span>#</span>
@@ -1074,11 +1131,17 @@
                     </button>
                 </div>
             </div>
+
+                <h2>Region</h2>
+
             <div class="country-select">
-                <button class="country-option" data-value="de">Germany <span><img src="./img/uk.png" alt="img"></span> </button>
-                <button class="country-option" data-value="jp">Japan <span><img src="./img/uk.png" alt="img"></span></button>
-                <button class="country-option" data-value="fr">France <span><img src="./img/uk.png" alt="img"></span></button>
-                <button class="country-option" data-value="ru">Russia <span><img src="./img/uk.png" alt="img"></span></button>
+                <button class="country-option" data-value="gl">Global <span><img src="./img/uk.png" alt="img"></span> </button>
+                <button class="country-option" data-value="eu">Europe <span><img src="./img/uk.png" alt="img"></span></button>
+                <button class="country-option" data-value="la">Latin America <span><img src="./img/uk.png" alt="img"></span></button>
+                <button class="country-option" data-value="na">North America <span><img src="./img/uk.png" alt="img"></span></button>
+                <button class="country-option" data-value="sa">Southeast Asia <span><img src="./img/uk.png" alt="img"></span> </button>
+                <button class="country-option" data-value="me">Middle East <span><img src="./img/uk.png" alt="img"></span></button>
+                <button class="country-option" data-value="naf">North Africa <span><img src="./img/uk.png" alt="img"></span></button>
             </div>
 
         </div>
