--- a/index.html
+++ b/index.html
@@ -92,9 +92,11 @@
   <section class="main-section" id="mainSection">
     <div class="left" id="content-section">
       <div class="content-left active" id="content1">
-        <h2>Lorem ipsum dolor sit amet</h2>
-        <p>Click the button below to&#160;Download chat!</p>
-        <a class="btn-app" href="#">Download</a>
+       <div class="hero-section">
+        <h2>Swipe Roulette</h2>
+        <p>Make friends, chose gender and region</p>
+        <button class="btn-app" data-popup="packagePopup" >March Gold</button>
+       </div>
       </div>
       <div class="content-left" id="content2">
         <div class="history">
@@ -553,16 +555,29 @@
       </div>
       <div class="content-left" id="content4">
         <div class="package-container">
-          <div class="package brilliant">
+          <div class="package ">
             <div class="name">Basic</div>
             <div class="price">&#8364;0</div>
             <div class="trial">Totally free</div>
             <hr />
             <ul>
-              <li><strong>5</strong> team members</li>
-              <li><strong>3</strong> team playlists</li>
-              <li><strong>Unlimited</strong> public playlists</li>
+            <li><strong>5</strong> team members</li>
+            <li><strong>3</strong> team playlists</li>
+            <li><strong>Unlimited</strong> public playlists</li>
             </ul>
+            <button type="button" class="package-btn">Buy now</button>
+          </div>
+          <div class="package brilliant">
+            <div class="name">Golden</div>
+            <div class="price">&#8364;2</div>
+            <div class="trial">Available for a&#160;month</div>
+            <hr />
+            <ul>
+            <li><strong>8</strong> team members</li>
+            <li><strong>6</strong> team playlists</li>
+            <li><strong>Unlimited</strong> public playlists</li>
+            </ul>
+            <button type="button" class="package-btn">Buy now</button>
           </div>
           <div class="package">
             <div class="name">Brilliant</div>
@@ -570,60 +585,16 @@
             <div class="trial">Free 30 day trial</div>
             <hr />
             <ul>
-              <li><strong>Unlimited</strong> team members</li>
-              <li><strong>Unlimited</strong> team playlists</li>
-              <li><strong>Unlimited</strong> public playlists</li>
-              <li>Team analytics</li>
-              <li>Send files</li>
+            <li><strong>Unlimited</strong> team members</li>
+            <li><strong>Unlimited</strong> team playlists</li>
+            <li><strong>Unlimited</strong> public playlists</li>
+            <li>Team analytics</li>
+            <li>Send files</li>
             </ul>
+            <button type="button" class="package-btn">Buy now</button>
           </div>
-          <div class="package">
-            <div class="name">Golden</div>
-            <div class="price">&#8364;2</div>
-            <div class="trial">Available for a&#160;month</div>
-            <hr />
-            <ul>
-              <li><strong>8</strong> team members</li>
-              <li><strong>6</strong> team playlists</li>
-              <li><strong>Unlimited</strong> public playlists</li>
-            </ul>
+
           </div>
-          <div class="package brilliant">
-            <div class="name">Basic</div>
-            <div class="price">&#8364;0</div>
-            <div class="trial">Totally free</div>
-            <hr />
-            <ul>
-              <li><strong>5</strong> team members</li>
-              <li><strong>3</strong> team playlists</li>
-              <li><strong>Unlimited</strong> public playlists</li>
-            </ul>
-          </div>
-          <div class="package">
-            <div class="name">Brilliant</div>
-            <div class="price">&#8364;5</div>
-            <div class="trial">Free 30 day trial</div>
-            <hr />
-            <ul>
-              <li><strong>Unlimited</strong> team members</li>
-              <li><strong>Unlimited</strong> team playlists</li>
-              <li><strong>Unlimited</strong> public playlists</li>
-              <li>Team analytics</li>
-              <li>Send files</li>
-            </ul>
-          </div>
-          <div class="package">
-            <div class="name">Golden</div>
-            <div class="price">&#8364;2</div>
-            <div class="trial">Available for a&#160;month</div>
-            <hr />
-            <ul>
-              <li><strong>8</strong> team members</li>
-              <li><strong>6</strong> team playlists</li>
-              <li><strong>Unlimited</strong> public playlists</li>
-            </ul>
-          </div>
-        </div>
       </div>
 
       <!-- <button type="button" class="btn-store btn-nav" data-popup="storePopup">Store</button> -->
@@ -1010,27 +981,6 @@
 
     </div>
 
-    <div id="storePopup" class="popup">
-        <div class="popup-background">
-        </div>
-            <div class="popup-content">
-                <h2>Sign In</h2>
-                <p>Enter your credentials to&#160;sign in.</p>
-                <button class="popup-close">Close</button>
-            </div>
-
-    </div>
-    <div id="popup1" class="popup">
-        <div class="popup-background">
-        </div>
-            <div class="popup-content">
-                <h2>Sign In</h2>
-                <p>Enter your credentials to&#160;sign in.</p>
-                <button class="popup-close">Close</button>
-
-        </div>
-    </div>
-
     <div id="genderPopup" class="popup">
         <div class="popup-background"></div>
         <div class="popup-content gender-popup">
@@ -1061,6 +1011,55 @@
         </div>
     </div>
 
+    <div id="packagePopup" class="popup">
+        <div class="popup-background"></div>
+        <div class="popup-content">
+            <button class="popup-close">
+                <svg viewBox="0 0 24 24"  xmlns="http://www.w3.org/2000/svg"><g stroke-width="0"></g><g stroke-linecap="round" stroke-linejoin="round"></g><g> <path d="M20.7457 3.32851C20.3552 2.93798 19.722 2.93798 19.3315 3.32851L12.0371 10.6229L4.74275 3.32851C4.35223 2.93798 3.71906 2.93798 3.32854 3.32851C2.93801 3.71903 2.93801 4.3522 3.32854 4.74272L10.6229 12.0371L3.32856 19.3314C2.93803 19.722 2.93803 20.3551 3.32856 20.7457C3.71908 21.1362 4.35225 21.1362 4.74277 20.7457L12.0371 13.4513L19.3315 20.7457C19.722 21.1362 20.3552 21.1362 20.7457 20.7457C21.1362 20.3551 21.1362 19.722 20.7457 19.3315L13.4513 12.0371L20.7457 4.74272C21.1362 4.3522 21.1362 3.71903 20.7457 3.32851Z"></path> </g></svg>
+            </button>
+            <div class="package-container">
+                <div class="package ">
+                  <div class="name">Basic</div>
+                  <div class="price">&#8364;0</div>
+                  <div class="trial">Totally free</div>
+                  <hr />
+                  <ul>
+                    <li><strong>5</strong> team members</li>
+                    <li><strong>3</strong> team playlists</li>
+                    <li><strong>Unlimited</strong> public playlists</li>
+                  </ul>
+                  <button type="button" class="package-btn">Buy now</button>
+                </div>
+                <div class="package brilliant">
+                  <div class="name">Golden</div>
+                  <div class="price">&#8364;2</div>
+                  <div class="trial">Available for a&#160;month</div>
+                  <hr />
+                  <ul>
+                    <li><strong>8</strong> team members</li>
+                    <li><strong>6</strong> team playlists</li>
+                    <li><strong>Unlimited</strong> public playlists</li>
+                  </ul>
+                  <button type="button" class="package-btn">Buy now</button>
+                </div>
+                <div class="package">
+                  <div class="name">Brilliant</div>
+                  <div class="price">&#8364;5</div>
+                  <div class="trial">Free 30 day trial</div>
+                  <hr />
+                  <ul>
+                    <li><strong>Unlimited</strong> team members</li>
+                    <li><strong>Unlimited</strong> team playlists</li>
+                    <li><strong>Unlimited</strong> public playlists</li>
+                    <li>Team analytics</li>
+                    <li>Send files</li>
+                  </ul>
+                  <button type="button" class="package-btn">Buy now</button>
+                </div>
+
+              </div>
+        </div>
+    </div>
     <div id="countryPopup" class="popup">
         <div class="popup-background"></div>
         <div class="popup-content">
@@ -1112,7 +1111,7 @@
                     </span>
                     Female
                 </button>
-                <button class="gender-option" data-value="all">
+                <button class="gender-option active" id="genderdef" data-value="all">
                     <span >
                         <img src="./img/gender.png" alt="img">
                     </span>
@@ -1135,7 +1134,7 @@
                 <h2>Region</h2>
 
             <div class="country-select">
-                <button class="country-option" data-value="gl">Global <span><img src="./img/uk.png" alt="img"></span> </button>
+                <button class="country-option active" data-value="gl">Global <span><img src="./img/uk.png" alt="img"></span> </button>
                 <button class="country-option" data-value="eu">Europe <span><img src="./img/uk.png" alt="img"></span></button>
                 <button class="country-option" data-value="la">Latin America <span><img src="./img/uk.png" alt="img"></span></button>
                 <button class="country-option" data-value="na">North America <span><img src="./img/uk.png" alt="img"></span></button>
