--- a/index.html
+++ b/index.html
@@ -847,21 +847,7 @@
             </svg>
           </div>
           <div id="heart" class="heart-btn">
-            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-              <defs>
-                <!-- Определение яркого зелёного градиента -->
-                <linearGradient id="gradBrightGreen" x1="0%" y1="0%" x2="100%" y2="100%">
-                  <stop offset="0%" style="stop-color:#00ff00; stop-opacity:1" /> <!-- Яркий зелёный -->
-                  <stop offset="100%" style="stop-color:#009900; stop-opacity:1" /> <!-- Темно-зелёный -->
-                </linearGradient>
-              </defs>
-
-              <!-- Применение яркого зелёного градиента к пути -->
-              <path
-                d="M15.7 4C18.87 4 21 6.98 21 9.76C21 15.39 12.16 20 12 20C11.84 20 3 15.39 3 9.76C3 6.98 5.13 4 8.3 4C10.12 4 11.31 4.91 12 5.71C12.69 4.91 13.88 4 15.7 4Z"
-                fill="url(#gradBrightGreen)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-              </path>
-            </svg>
+           <span>Accept</span>
 
           </div>
           <div class="border-light"></div>
