--- a/index.html
+++ b/index.html
@@ -961,6 +961,21 @@
                     <div class="tab" data-tab="register">Register</div>
                 </div>
                 <div class="form-container">
+                    <form id="guestForm" class="form ">
+                        <div class="input-group">
+                            <input type="text" id="guestName" placeholder="Full Name" required>
+                        </div>
+                        <div class="input-group">
+                            <select id="guestGender">
+                                <option value="0">Male</option>
+                                <option value="1">Female</option>
+                            </select>
+                        </div>
+                            <button type="submit">Start</button>
+                            <div class="error-message" id="loginError">error-message</div>
+                        </div>
+
+                    </form>
                     <form id="loginForm" class="form active">
                         <div class="input-group">
                             <input type="email" id="loginEmail" placeholder="Email" required>
@@ -1046,11 +1061,12 @@
                                         </g>
                                     </svg> </span>
                             </a>
-                            <a href="#" class="link-auth guest">
+                            <a href="#" data-tab="guest" class="link-auth guest tab">
                                 guest
                             </a>
                         </div>
                     </form>
+
                     <form id="registerForm" class="form">
                         <div class="input-group">
                             <input type="text" id="registerName" placeholder="Full Name" required>
@@ -1152,18 +1168,19 @@
 
                     </form>
                 </div>
+                <button class="popup-close">
+                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <g stroke-width="0"></g>
+                        <g stroke-linecap="round" stroke-linejoin="round"></g>
+                        <g>
+                            <path
+								d="M20.7457 3.32851C20.3552 2.93798 19.722 2.93798 19.3315 3.32851L12.0371 10.6229L4.74275 3.32851C4.35223 2.93798 3.71906 2.93798 3.32854 3.32851C2.93801 3.71903 2.93801 4.3522 3.32854 4.74272L10.6229 12.0371L3.32856 19.3314C2.93803 19.722 2.93803 20.3551 3.32856 20.7457C3.71908 21.1362 4.35225 21.1362 4.74277 20.7457L12.0371 13.4513L19.3315 20.7457C19.722 21.1362 20.3552 21.1362 20.7457 20.7457C21.1362 20.3551 21.1362 19.722 20.7457 19.3315L13.4513 12.0371L20.7457 4.74272C21.1362 4.3522 21.1362 3.71903 20.7457 3.32851Z">
+                            </path>
+                        </g>
+                    </svg>
+                </button>
             </div>
-            <button class="popup-close">
-                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <g stroke-width="0"></g>
-                    <g stroke-linecap="round" stroke-linejoin="round"></g>
-                    <g>
-                        <path
-							d="M20.7457 3.32851C20.3552 2.93798 19.722 2.93798 19.3315 3.32851L12.0371 10.6229L4.74275 3.32851C4.35223 2.93798 3.71906 2.93798 3.32854 3.32851C2.93801 3.71903 2.93801 4.3522 3.32854 4.74272L10.6229 12.0371L3.32856 19.3314C2.93803 19.722 2.93803 20.3551 3.32856 20.7457C3.71908 21.1362 4.35225 21.1362 4.74277 20.7457L12.0371 13.4513L19.3315 20.7457C19.722 21.1362 20.3552 21.1362 20.7457 20.7457C21.1362 20.3551 21.1362 19.722 20.7457 19.3315L13.4513 12.0371L20.7457 4.74272C21.1362 4.3522 21.1362 3.71903 20.7457 3.32851Z">
-                        </path>
-                    </g>
-                </svg>
-            </button>
+
         </div>
 
     </div>
